[package]
name = "kaleidoscope-rust-core"
version = "0.1.0"
authors = ["Chen Junda <ddadaal@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm10-0" }
phf = { version = "0.8", features = ["macros"]}